# rustc-miette-adapter

./: Cargo.toml  README.md
src/: lib.rs  main.rs
