[package]
name = "rustc-miette-adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo = { package = "cargo_metadata", version = "0.14.2" }
miette = { version = "4.2.1", features = ["fancy"] }
serde_json = "1.0.79"
